scripts/nullaway/wpi/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8.txt
../wpi/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/core/DynamicCaseContext.java:267: error: [NullAway] dereferenced expression ex is @Nullable
            buffer.append(ex.getMessage()).append("\n");
                            ^
    (see http://t.uber.com/nullaway )
../wpi/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/core/DynamicCaseContext.java:318: error: [NullAway] dereferenced expression one.getDimension().getAlias() is @Nullable
                return one.getDimension().getAlias().compareTo(other.getDimension().getAlias());
                                                    ^
    (see http://t.uber.com/nullaway )
../wpi/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/core/DynamicCaseContext.java:388: error: [NullAway] dereferenced expression pair.getDimension().getDottedName() is @Nullable
            if (pair.getDimension().getDottedName().equalsIgnoreCase(dottedName)) {
                                                   ^
    (see http://t.uber.com/nullaway )
../wpi/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/core/impl/dimensions/AbstractDimension.java:27: error: [NullAway] dereferenced expression getEnumType() is @Nullable
            field = getEnumType().getField(choice);
                                 ^
    (see http://t.uber.com/nullaway )
../wpi/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/core/impl/dimensions/AbstractDimension.java:60: error: [NullAway] dereferenced expression getEnumType() is @Nullable
            Field field = getEnumType().getField(choice);
                                       ^
    (see http://t.uber.com/nullaway )
../wpi/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/core/impl/dimensions/AbstractDimension.java:92: error: [NullAway] dereferenced expression getEnumType() is @Nullable
            final Method method = getEnumType().getMethod("values");
                                               ^
    (see http://t.uber.com/nullaway )
../wpi/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/core/report/Cell.java:24: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.label = label;
                   ^
    (see http://t.uber.com/nullaway )
../wpi/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/core/DimensionWeight.java:12: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.dottedName = alias;
                        ^
    (see http://t.uber.com/nullaway )
../wpi/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/core/impl/processors/DynamicCaseProcessor.java:205: error: [NullAway] unboxing of a @Nullable value
            constraintSequence[index] = constraintDimension.value();
                               ^
    (see http://t.uber.com/nullaway )
../wpi/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/core/impl/explorers/ExhaustiveExploreStrategy.java:40: error: [NullAway] assigning @Nullable expression to @NonNull field
            this.filter = filter;
                        ^
    (see http://t.uber.com/nullaway )
../wpi/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/core/impl/explorers/ExhaustiveExploreStrategy.java:132: error: [NullAway] unboxing of a @Nullable value
                return dimensionIndex.get(o1.getDottedName()) - dimensionIndex.get(o2.getDottedName());
                                         ^
    (see http://t.uber.com/nullaway )
../wpi/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/core/impl/explorers/ExhaustiveExploreStrategy.java:132: error: [NullAway] unboxing of a @Nullable value
                return dimensionIndex.get(o1.getDottedName()) - dimensionIndex.get(o2.getDottedName());
                                                                                  ^
    (see http://t.uber.com/nullaway )
../wpi/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/core/impl/DefaultTestContext.java:25: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.base = base;
                  ^
    (see http://t.uber.com/nullaway )
../wpi/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/core/impl/DefaultTestContext.java:28: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.target = target;
                    ^
    (see http://t.uber.com/nullaway )
../wpi/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/utilities/ClassUtils.java:23: error: [NullAway] dereferenced expression field is @Nullable
            field.setAccessible(true);
                 ^
    (see http://t.uber.com/nullaway )
../wpi/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/utilities/ClassUtils.java:66: error: [NullAway] dereferenced expression field is @Nullable
            if (field.isAccessible()) {
                     ^
    (see http://t.uber.com/nullaway )
../wpi/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/utilities/ClassUtils.java:100: error: [NullAway] dereferenced expression field is @Nullable
        if (!field.isAccessible()) {
                  ^
    (see http://t.uber.com/nullaway )
../wpi/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/utilities/ScriptLexicalAnalyzer.java:10: error: [NullAway] dereferenced expression with is @Nullable
        final String navigateExpression = with.replace("${", "").replace("}", "");
                                              ^
    (see http://t.uber.com/nullaway )
../wpi/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/utilities/ScriptLexicalAnalyzer.java:17: error: [NullAway] dereferenced expression with is @Nullable
        if (with.startsWith("${")) {
                ^
    (see http://t.uber.com/nullaway )
../wpi/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/utilities/ScriptLexicalAnalyzer.java:58: error: [NullAway] passing @Nullable parameter 'ClassUtils.getProperty(variableInstance, navigation.substring(0, first))' where @NonNull is required
            return evaluateVariableNavigation(ClassUtils.getProperty(variableInstance, navigation.substring(0, first)), navigation.substring(first + 1));
                                                                    ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
20 errors
